--- a/curations/pypi/pypi/-/supervisor.yaml
+++ b/curations/pypi/pypi/-/supervisor.yaml
@@ -11,4 +11,4 @@ revisions:
       declared: BSD-3-Clause-Modification
   4.2.5:
     licensed:
-      declared: ZPL-2.1
+      declared: BSD-3-Clause-Modification
