--- a/curations/maven/mavencentral/com.facebook.android/facebook-android-sdk.yaml
+++ b/curations/maven/mavencentral/com.facebook.android/facebook-android-sdk.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   11.2.0:
     licensed:
-      declared: MIT
+      declared: OTHER
   5.11.2:
     licensed:
       declared: OTHER
