--- a/curations/pod/cocoapods/-/FBSDKShareKit.yaml
+++ b/curations/pod/cocoapods/-/FBSDKShareKit.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   12.2.0:
     licensed:
-      declared: MIT
+      declared: OTHER
   9.0.1:
     licensed:
       declared: OTHER
