--- a/curations/pod/cocoapods/-/FBSDKLoginKit.yaml
+++ b/curations/pod/cocoapods/-/FBSDKLoginKit.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   12.2.0:
     licensed:
-      declared: MIT
+      declared: OTHER
   4.38.1:
     licensed:
       declared: OTHER
