--- a/curations/maven/mavencentral/com.facebook.android/facebook-core.yaml
+++ b/curations/maven/mavencentral/com.facebook.android/facebook-core.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   11.2.0:
     licensed:
-      declared: MIT
+      declared: OTHER
   12.3.0:
     licensed:
       declared: OTHER
