--- a/curations/pypi/pypi/-/structlog.yaml
+++ b/curations/pypi/pypi/-/structlog.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: Apache-2.0 OR MIT
   22.3.0:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 OR MIT
