--- a/curations/nuget/nuget/-/Xamarin.UITest.yaml
+++ b/curations/nuget/nuget/-/Xamarin.UITest.yaml
@@ -107,13 +107,13 @@ revisions:
       declared: OTHER
   3.1.0:
     licensed:
-      declared: MIT
+      declared: OTHER
   3.2.0:
     licensed:
       declared: OTHER
   3.2.2:
     licensed:
-      declared: MIT
+      declared: OTHER
   3.2.3:
     licensed:
       declared: OTHER
