--- a/curations/nuget/nuget/-/Microsoft.OData.Edm.yaml
+++ b/curations/nuget/nuget/-/Microsoft.OData.Edm.yaml
@@ -40,7 +40,7 @@ revisions:
         type: git
         url: 'https://github.com/odata/odata.net/commit/f3bf65a74a7ed4028ff8074ccae31e4c2019772d'
     licensed:
-      declared: CC-BY-3.0 AND MIT
+      declared: MIT
   7.2.0:
     licensed:
       declared: MIT
