--- a/curations/pypi/pypi/-/chardet.yaml
+++ b/curations/pypi/pypi/-/chardet.yaml
@@ -5,10 +5,10 @@ coordinates:
 revisions:
   3.0.4:
     licensed:
-      declared: LGPL-2.1-only
+      declared: LGPL-2.1-or-later
   4.0.0:
     licensed:
-      declared: LGPL-2.1-only
+      declared: LGPL-2.1-or-later
   5.1.0:
     licensed:
-      declared: LGPL-2.1-only
+      declared: LGPL-2.1-or-later
