--- a/curations/git/github/toddr/xml-parser.yaml
+++ b/curations/git/github/toddr/xml-parser.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   cd8984de30537d988fabc34da8e9301572ffdef1:
     licensed:
-      declared: Artistic-1.0-Perl
+      declared: Artistic-1.0-Perl OR GPL-1.0-or-later
