--- a/curations/nuget/nuget/-/EFCore.BulkExtensions.yaml
+++ b/curations/nuget/nuget/-/EFCore.BulkExtensions.yaml
@@ -5,10 +5,10 @@ coordinates:
 revisions:
   2.1.1:
     licensed:
-      declared: MIT
+      declared: MIT OR OTHER
   2.1.7:
     licensed:
-      declared: MIT
+      declared: MIT OR OTHER
   6.7.0:
     licensed:
-      declared: OTHER
+      declared: MIT OR OTHER
