--- a/curations/nuget/nuget/-/NetMQ.yaml
+++ b/curations/nuget/nuget/-/NetMQ.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: OTHER
   4.0.1.10:
     licensed:
-      declared: LGPL-3.0
+      declared: OTHER
   4.0.1.6:
     licensed:
       declared: OTHER
