--- a/curations/pypi/pypi/-/lit.yaml
+++ b/curations/pypi/pypi/-/lit.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: Apache-2.0 WITH LLVM-exception
   15.0.7:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 WITH LLVM-exception
