--- a/curations/git/github/golang/net.yaml
+++ b/curations/git/github/golang/net.yaml
@@ -36,7 +36,7 @@ revisions:
       declared: BSD-3-Clause AND OTHER
   59133d7f0dd7cb4ec46ee7b17b1b71cff79e0309:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND OTHER
   69e39bad7dc2bbb411fa35755c46020969029fa7:
     licensed:
       declared: BSD-3-Clause AND OTHER
