--- a/curations/nuget/nuget/-/python2x86.yaml
+++ b/curations/nuget/nuget/-/python2x86.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   2.7.12:
     licensed:
-      declared: PSF-2.0
+      declared: Python-2.0.1
   2.7.18:
     licensed:
       declared: Python-2.0.1
