--- a/curations/nuget/nuget/-/Grid.Mvc.yaml
+++ b/curations/nuget/nuget/-/Grid.Mvc.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: LGPL-2.1-only
   3.1.0-ci1036:
     licensed:
-      declared: GPL-2.0-only
+      declared: LGPL-2.1-only
