--- a/curations/git/github/juju/mutex.yaml
+++ b/curations/git/github/juju/mutex.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   d21b13acf4bfd8a8b0482a3a78e44d98880b40d3:
     licensed:
-      declared: LGPL-3.0-only
+      declared: LGPL-3.0-only WITH LGPL-3.0-linking-exception
