--- a/curations/git/github/juju/clock.yaml
+++ b/curations/git/github/juju/clock.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   9c5c9712527c7986f012361e7d13756b4d99543d:
     licensed:
-      declared: LGPL-3.0-only
+      declared: LGPL-3.0-only WITH LGPL-3.0-linking-exception
