--- a/curations/git/github/juju/errors.yaml
+++ b/curations/git/github/juju/errors.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   3fe23663418fc1d724868c84f21b7519bbac7441:
     licensed:
-      declared: LGPL-3.0-only
+      declared: LGPL-3.0-only WITH LGPL-3.0-linking-exception
