--- a/curations/nuget/nuget/-/Hangfire.yaml
+++ b/curations/nuget/nuget/-/Hangfire.yaml
@@ -35,7 +35,7 @@ revisions:
       declared: LGPL-3.0-or-later OR OTHER
   1.7.33:
     licensed:
-      declared: OTHER
+      declared: LGPL-3.0-or-later OR OTHER
   1.7.9:
     licensed:
       declared: LGPL-3.0-or-later OR OTHER
