--- a/curations/nuget/nuget/-/bootstrap.yaml
+++ b/curations/nuget/nuget/-/bootstrap.yaml
@@ -14,7 +14,7 @@ revisions:
       declared: Apache-2.0
   3.0.3:
     licensed:
-      declared: MIT
+      declared: Apache-2.0
   3.1.0:
     licensed:
       declared: MIT
