--- a/curations/pypi/pypi/-/dominate.yaml
+++ b/curations/pypi/pypi/-/dominate.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: LGPL-3.0-or-later
   2.7.0:
     licensed:
-      declared: LGPL-3.0-only
+      declared: LGPL-3.0-or-later
