--- a/curations/nuget/nuget/-/EPPlus.yaml
+++ b/curations/nuget/nuget/-/EPPlus.yaml
@@ -23,7 +23,7 @@ revisions:
       declared: LGPL-3.0-only
   4.5.2:
     licensed:
-      declared: GPL-3.0-only
+      declared: LGPL-3.0-only
   4.5.2.1:
     licensed:
       declared: LGPL-3.0-only
