--- a/curations/maven/mavencentral/org.eclipse.jgit/org.eclipse.jgit.yaml
+++ b/curations/maven/mavencentral/org.eclipse.jgit/org.eclipse.jgit.yaml
@@ -30,4 +30,4 @@ revisions:
       declared: BSD-3-Clause
   6.2.0.202206071550-r:
     licensed:
-      declared: EPL-2.0
+      declared: BSD-3-Clause
