--- a/curations/nuget/nuget/-/Z.EntityFramework.Extensions.EFCore.yaml
+++ b/curations/nuget/nuget/-/Z.EntityFramework.Extensions.EFCore.yaml
@@ -119,7 +119,7 @@ revisions:
       declared: OTHER
   6.15.0:
     licensed:
-      declared: MIT
+      declared: OTHER
   7.18.0:
     licensed:
       declared: OTHER
