--- a/curations/maven/mavencentral/org.eclipse.jgit/org.eclipse.jgit.yaml
+++ b/curations/maven/mavencentral/org.eclipse.jgit/org.eclipse.jgit.yaml
@@ -33,4 +33,4 @@ revisions:
       declared: BSD-3-Clause
   6.5.0.202303070854-r:
     licensed:
-      declared: EPL-2.0
+      declared: BSD-3-Clause
