--- a/curations/git/github/c-ares/c-ares.yaml
+++ b/curations/git/github/c-ares/c-ares.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   2aa086f822aad5017a6f2061ef656f237a62d0ed:
     licensed:
-      declared: MIT
+      declared: OTHER
   39c73b503d9ef70a58ad1f4a4643f15b01407c66:
     licensed:
       declared: OTHER
