--- a/curations/go/golang/golang.org/x/sys.yaml
+++ b/curations/go/golang/golang.org/x/sys.yaml
@@ -27,4 +27,4 @@ revisions:
       declared: BSD-3-Clause AND OTHER
   v0.0.0-20220727055044-e65921a090b8:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND OTHER
