--- a/curations/nuget/nuget/-/SixLabors.ImageSharp.yaml
+++ b/curations/nuget/nuget/-/SixLabors.ImageSharp.yaml
@@ -11,4 +11,4 @@ revisions:
       declared: Apache-2.0 OR OTHER
   3.0.1:
     licensed:
-      declared: LicenseRef-scancode-six-labors-split-1.0
+      declared: Apache-2.0 OR OTHER
