--- a/curations/maven/mavengoogle/com.google.testing.platform/core.yaml
+++ b/curations/maven/mavengoogle/com.google.testing.platform/core.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: OTHER
   0.0.8-alpha08:
     licensed:
-      declared: LicenseRef-scancode-android-sdk-license.
+      declared: OTHER
