--- a/curations/nuget/nuget/-/Stub.System.Data.SQLite.Core.NetFramework.yaml
+++ b/curations/nuget/nuget/-/Stub.System.Data.SQLite.Core.NetFramework.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: OTHER
   1.0.115:
     licensed:
-      declared: NONE
+      declared: OTHER
   1.0.115.5:
     licensed:
       declared: OTHER
