--- a/curations/maven/mavencentral/org.jruby.ext.posix/jnr-posix.yaml
+++ b/curations/maven/mavencentral/org.jruby.ext.posix/jnr-posix.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   1.1.4:
     licensed:
-      declared: GPL-2.0 OR EPL-2.0
+      declared: CPL-1.0 OR GPL-2.0-or-later OR LGPL-2.1-or-later
