--- a/curations/nuget/nuget/-/NAudio.yaml
+++ b/curations/nuget/nuget/-/NAudio.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: MS-PL
   1.8.0:
     licensed:
-      declared: MIT
+      declared: MS-PL
   1.8.4:
     licensed:
       declared: MS-PL
