--- a/curations/git/github/scikit-image/scikit-image.yaml
+++ b/curations/git/github/scikit-image/scikit-image.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   5e74a4a3a5149a8a14566b81a32bb15499aa3857:
     licensed:
-      declared: BSD-3-Clause AND BSD-2-Clause AND MIT AND OTHER
+      declared: BSD-3-Clause
