--- a/curations/pypi/pypi/-/azure-ml-component.yaml
+++ b/curations/pypi/pypi/-/azure-ml-component.yaml
@@ -14,7 +14,7 @@ revisions:
       declared: OTHER
   0.1.0.38576839:
     licensed:
-      declared: MIT
+      declared: OTHER
   0.9.10.post1:
     licensed:
       declared: OTHER
