--- a/curations/npm/npmjs/@sapui5/sap.fe.templates.yaml
+++ b/curations/npm/npmjs/@sapui5/sap.fe.templates.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   1.108.2:
     licensed:
-      declared: LicenseRef-scancode-unknown-license-reference
+      declared: OTHER
