--- a/curations/npm/npmjs/@progress/kendo-react-progressbars.yaml
+++ b/curations/npm/npmjs/@progress/kendo-react-progressbars.yaml
@@ -18,7 +18,7 @@ revisions:
       declared: OTHER
   5.13.1:
     licensed:
-      declared: CDDL-1.0
+      declared: OTHER
   5.3.0:
     licensed:
       declared: OTHER
