--- a/curations/npm/npmjs/@progress/kendo-react-dialogs.yaml
+++ b/curations/npm/npmjs/@progress/kendo-react-dialogs.yaml
@@ -12,7 +12,7 @@ revisions:
       declared: OTHER
   5.13.1:
     licensed:
-      declared: CDDL-1.0
+      declared: OTHER
   5.5.0:
     licensed:
       declared: OTHER
