--- a/curations/git/github/supervisor/supervisor.yaml
+++ b/curations/git/github/supervisor/supervisor.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   44eefd5846b68fab4dc7ce57b9a30629d9aa5c4a:
     licensed:
-      declared: OTHER
+      declared: BSD-3-Clause-Modification
   5fcab2c8349f5e0be664f2b29daff975bc889255:
     licensed:
-      declared: ZPL-2.1
+      declared: BSD-3-Clause-Modification
