--- a/curations/git/github/aws/aws-sdk-java.yaml
+++ b/curations/git/github/aws/aws-sdk-java.yaml
@@ -25,10 +25,13 @@ revisions:
   40772caa0fe16afe13f5e2a8a2d0668fe37b1c1d:
     licensed:
       declared: Apache-2.0
-  a09eee1e8f39077386c25362d4fe004294e7ca60:
+  78693f2bd3542a64c97752535e9e6085f427cd54:
     licensed:
       declared: Apache-2.0
   838fa9b2cecaa19bad33520e1254f32ca58c3ecc:
+    licensed:
+      declared: Apache-2.0
+  a09eee1e8f39077386c25362d4fe004294e7ca60:
     licensed:
       declared: Apache-2.0
   d158c910b07b12ea0cdb362aa2ae968709cb0911:
