--- a/curations/git/github/elastic/elasticsearch.yaml
+++ b/curations/git/github/elastic/elasticsearch.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: Apache-2.0
   120eabe1c8a0cb2ae87cffc109a5b65d213e9df1:
     licensed:
-      declared: SSPL-1.0
+      declared: SSPL-1.0 OR Elastic-2.0
   1fd8f691bf2e467057b864eea9103a6e3345af3e:
     licensed:
       declared: Apache-2.0
