--- a/curations/git/github/elastic/elasticsearch.yaml
+++ b/curations/git/github/elastic/elasticsearch.yaml
@@ -39,4 +39,4 @@ revisions:
       declared: Apache-2.0
   ef48222227ee6b9e70e502f0f0daa52435ee634d:
     licensed:
-      declared: SSPL-1.0
+      declared: SSPL-1.0 OR Elastic-2.0
