--- a/curations/npm/npmjs/@azure/communication-calling.yaml
+++ b/curations/npm/npmjs/@azure/communication-calling.yaml
@@ -24,7 +24,7 @@ revisions:
       declared: OTHER
   1.13.1-beta.1:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.2.0-beta.1:
     licensed:
       declared: OTHER
