--- a/curations/git/github/lz4/lz4.yaml
+++ b/curations/git/github/lz4/lz4.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: BSD-2-Clause AND GPL-2.0-or-later
   5ff839680134437dbf4678f3d0c7b371d84f4964:
     licensed:
-      declared: BSD-2-Clause
+      declared: BSD-2-Clause AND GPL-2.0-or-later
   641b453d9db536ee020851bfcb1dc39f61006f0a:
     licensed:
       declared: BSD-2-Clause AND GPL-2.0-or-later
