--- a/curations/maven/mavencentral/com.sun.xml.bind/jaxb-impl.yaml
+++ b/curations/maven/mavencentral/com.sun.xml.bind/jaxb-impl.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   2.1.7:
     licensed:
-      declared: CDDL-1.1
+      declared: CDDL-1.0 OR GPL-2.0-only WITH Classpath-exception-2.0
   2.2.3-1:
     licensed:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
