--- a/curations/maven/mavencentral/org.glassfish.jaxb/xsom.yaml
+++ b/curations/maven/mavencentral/org.glassfish.jaxb/xsom.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: BSD-3-Clause
   2.3.3-b02:
     licensed:
-      declared: EPL-2.0
+      declared: BSD-3-Clause
   3.0.2:
     licensed:
       declared: BSD-3-Clause
