--- a/curations/nuget/nuget/-/LibGit2Sharp.NativeBinaries.yaml
+++ b/curations/nuget/nuget/-/LibGit2Sharp.NativeBinaries.yaml
@@ -74,4 +74,4 @@ revisions:
       declared: GPL-2.0-only WITH GCC-exception-2.0
   2.0.320:
     licensed:
-      declared: MIT
+      declared: GPL-2.0-only WITH GCC-exception-2.0
