--- a/curations/go/golang/gopkg.in/yaml.v1.yaml
+++ b/curations/go/golang/gopkg.in/yaml.v1.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   v1.0.0-20140924161607-9f9df34309c0:
     licensed:
-      declared: GPL-3.0-only
+      declared: LGPL-3.0-only WITH LGPL-3.0-linking-exception
