--- a/curations/git/github/hanickadot/compile-time-regular-expressions.yaml
+++ b/curations/git/github/hanickadot/compile-time-regular-expressions.yaml
@@ -15,7 +15,7 @@ revisions:
       declared: Apache-2.0 WITH LLVM-exception
   c095ae765eff0cb002258c8334a66b286ca0bea8:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 WITH LLVM-exception
   f1e91de3fb91c5afcce99ce89012cb37070e88c1:
     licensed:
       declared: Apache-2.0 WITH LLVM-exception
