--- a/curations/nuget/nuget/-/RabbitMQ.Client.yaml
+++ b/curations/nuget/nuget/-/RabbitMQ.Client.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: Apache-2.0 OR MPL-1.1
   6.0.0:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 OR MPL-2.0
   6.2.0:
     licensed:
       declared: Apache-2.0 OR MPL-2.0
