--- a/curations/git/github/protocolbuffers/protobuf.yaml
+++ b/curations/git/github/protocolbuffers/protobuf.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: BSD-3-Clause
   655310ca192a6e3a050e0ca0b7084a2968072260:
     licensed:
-      declared: BSL-1.0
+      declared: BSD-3-Clause
   909a0f36a10075c4b4bc70fdee2c7e32dd612a72:
     licensed:
       declared: BSD-3-Clause
