--- a/curations/git/github/llvm-mirror/llvm.yaml
+++ b/curations/git/github/llvm-mirror/llvm.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: Apache-2.0 WITH LLVM-exception
   761cdf8f50ad57523c2e615e9708a839c9a34ebc:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 WITH LLVM-exception
