--- a/curations/nuget/nuget/-/Xamarin.UITest.yaml
+++ b/curations/nuget/nuget/-/Xamarin.UITest.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.3.8:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   2.0.6:
     licensed:
       declared: OTHER
