--- a/curations/pypi/pypi/-/azureml-pipeline.yaml
+++ b/curations/pypi/pypi/-/azureml-pipeline.yaml
@@ -155,7 +155,7 @@ revisions:
       declared: OTHER
   1.43.0:
     licensed:
-      declared: Python-2.0
+      declared: OTHER
   1.5.0:
     licensed:
       declared: OTHER
