--- a/curations/pypi/pypi/-/pycocotools.yaml
+++ b/curations/pypi/pypi/-/pycocotools.yaml
@@ -17,4 +17,4 @@ revisions:
       declared: BSD-2-Clause-Views
   2.0.6:
     licensed:
-      declared: BSD-2-Clause
+      declared: BSD-2-Clause-Views
