--- a/curations/pod/cocoapods/-/KIF.yaml
+++ b/curations/pod/cocoapods/-/KIF.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   3.3.0:
     licensed:
-      declared: MS-PL
+      declared: Apache-2.0
   3.7.7:
     licensed:
       declared: Apache-2.0
