--- a/curations/npm/npmjs/-/pcf-scripts.yaml
+++ b/curations/npm/npmjs/-/pcf-scripts.yaml
@@ -32,7 +32,7 @@ revisions:
       declared: OTHER
   1.23.3:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.3.1:
     licensed:
       declared: OTHER
