--- a/curations/nuget/nuget/-/Google.Api.Gax.Grpc.yaml
+++ b/curations/nuget/nuget/-/Google.Api.Gax.Grpc.yaml
@@ -23,7 +23,7 @@ revisions:
       declared: BSD-3-Clause
   2.3.0:
     licensed:
-      declared: Apache-2.0
+      declared: BSD-3-Clause
   2.5.0:
     licensed:
       declared: BSD-3-Clause
