--- a/curations/nuget/nuget/-/Google.Api.CommonProtos.yaml
+++ b/curations/nuget/nuget/-/Google.Api.CommonProtos.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: BSD-3-Clause
   1.2.0:
     licensed:
-      declared: Apache-2.0
+      declared: BSD-3-Clause
   1.3.0:
     licensed:
       declared: BSD-3-Clause
