--- a/curations/maven/mavencentral/org.openjdk.jol/jol-core.yaml
+++ b/curations/maven/mavencentral/org.openjdk.jol/jol-core.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   '0.16':
     licensed:
-      declared: GPL-2.0-only
+      declared: GPL-2.0-only WITH Classpath-exception-2.0
   '0.2':
     licensed:
       declared: GPL-2.0-only WITH Classpath-exception-2.0
