--- a/curations/maven/mavencentral/org.glassfish.jersey.core/jersey-client.yaml
+++ b/curations/maven/mavencentral/org.glassfish.jersey.core/jersey-client.yaml
@@ -24,4 +24,4 @@ revisions:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   2.4.1:
     licensed:
-      declared: CDDL-1.0
+      declared: CDDL-1.0 OR GPL-2.0-only WITH Classpath-exception-2.0
