--- a/curations/maven/mavencentral/org.codehaus.jettison/jettison.yaml
+++ b/curations/maven/mavencentral/org.codehaus.jettison/jettison.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   1.0-RC2:
     licensed:
-      declared: NONE
+      declared: Apache-2.0
   '1.1':
     licensed:
       declared: Apache-2.0
