--- a/curations/git/github/pingidentity/ldapsdk.yaml
+++ b/curations/git/github/pingidentity/ldapsdk.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   52bb41d333b13d7d21e684ff0fb6622f3c8059fa:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 OR GPL-2.0-only OR LGPL-2.1-only OR OTHER
