--- a/curations/maven/mavencentral/org.glassfish.jersey.media/jersey-media-json-jackson.yaml
+++ b/curations/maven/mavencentral/org.glassfish.jersey.media/jersey-media-json-jackson.yaml
@@ -6,10 +6,10 @@ coordinates:
 revisions:
   '2.12':
     licensed:
-      declared: CDDL-1.0
+      declared: CDDL-1.0 OR GPL-2.0-only WITH Classpath-exception-2.0
   '2.17':
     licensed:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   2.23.2:
     licensed:
-      declared: GPL-2.0-only WITH Classpath-exception-2.0 OR CDDL-1.1
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0 
