--- a/curations/pod/cocoapods/-/libwebp.yaml
+++ b/curations/pod/cocoapods/-/libwebp.yaml
@@ -20,4 +20,4 @@ revisions:
       declared: BSD-3-Clause AND OTHER
   1.2.4:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND OTHER
