--- a/curations/maven/mavencentral/org.jvnet.staxex/stax-ex.yaml
+++ b/curations/maven/mavencentral/org.jvnet.staxex/stax-ex.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   1.7.8:
     licensed:
-      declared: CDDL-1.1
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   '1.8':
     licensed:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
