--- a/curations/npm/npmjs/@microsoft/sp-loader.yaml
+++ b/curations/npm/npmjs/@microsoft/sp-loader.yaml
@@ -60,7 +60,7 @@ revisions:
       declared: OTHER
   1.17.3:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.2.0:
     licensed:
       declared: OTHER
