--- a/curations/npm/npmjs/@microsoft/sp-diagnostics.yaml
+++ b/curations/npm/npmjs/@microsoft/sp-diagnostics.yaml
@@ -42,7 +42,7 @@ revisions:
       declared: OTHER
   1.17.3:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.8.0:
     licensed:
       declared: OTHER
