--- a/curations/maven/mavencentral/org.locationtech.jts.io/jts-io-common.yaml
+++ b/curations/maven/mavencentral/org.locationtech.jts.io/jts-io-common.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: EPL-1.0 OR BSD-3-Clause
   1.19.0:
     licensed:
-      declared: EPL-2.0
+      declared: EPL-2.0 OR BSD-3-Clause
