--- a/curations/maven/mavencentral/org.locationtech.jts/jts-core.yaml
+++ b/curations/maven/mavencentral/org.locationtech.jts/jts-core.yaml
@@ -12,4 +12,4 @@ revisions:
       declared: BSD-3-Clause OR EPL-1.0
   1.19.0:
     licensed:
-      declared: EPL-2.0
+      declared: BSD-3-Clause OR EPL-2.0
