--- a/curations/maven/mavencentral/org.glassfish.hk2/hk2-utils.yaml
+++ b/curations/maven/mavencentral/org.glassfish.hk2/hk2-utils.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   2.2.0-b21:
     licensed:
-      declared: CDDL-1.1 OR GPL-2.0-onlly WITH Classpath-exception-2.0
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   2.4.0-b10:
     licensed:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
