--- a/curations/maven/mavencentral/org.glassfish.jaxb/txw2.yaml
+++ b/curations/maven/mavencentral/org.glassfish.jaxb/txw2.yaml
@@ -27,7 +27,7 @@ revisions:
       declared: BSD-3-Clause
   2.3.5:
     licensed:
-      declared: EPL-1.0
+      declared: BSD-3-Clause
   2.3.6:
     licensed:
       declared: BSD-3-Clause
