--- a/curations/pypi/pypi/-/astroid.yaml
+++ b/curations/pypi/pypi/-/astroid.yaml
@@ -26,7 +26,7 @@ revisions:
       declared: LGPL-2.1-or-later
   2.15.5:
     licensed:
-      declared: LGPL-2.1-only+
+      declared: LGPL-2.1-or-later
   2.3.1:
     licensed:
       declared: LGPL-2.1-only
