--- a/curations/pypi/pypi/-/pyzmq.yaml
+++ b/curations/pypi/pypi/-/pyzmq.yaml
@@ -14,4 +14,4 @@ revisions:
       declared: BSD-3-Clause
   25.0.2:
     licensed:
-      declared: MPL-2.0
+      declared: BSD-3-Clause AND OTHER
