--- a/curations/npm/npmjs/@microsoft/sp-component-base.yaml
+++ b/curations/npm/npmjs/@microsoft/sp-component-base.yaml
@@ -39,7 +39,7 @@ revisions:
       declared: OTHER
   1.17.3:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.8.2:
     licensed:
       declared: OTHER
