--- a/curations/npm/npmjs/@microsoft/sp-dynamic-data.yaml
+++ b/curations/npm/npmjs/@microsoft/sp-dynamic-data.yaml
@@ -42,7 +42,7 @@ revisions:
       declared: OTHER
   1.17.3:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.7.1:
     licensed:
       declared: OTHER
