--- a/curations/git/github/haproxy/haproxy.yaml
+++ b/curations/git/github/haproxy/haproxy.yaml
@@ -7,3 +7,6 @@ revisions:
   6cbbecf09734aeb5fa8bb88f36f06a6f6d35e813:
     licensed:
       declared: OTHER
+  fdd8154ed37fef7f351075caa357917f94704dd7:
+    licensed:
+      declared: OTHER
