--- a/curations/maven/mavencentral/org.glassfish.jaxb/jaxb-core.yaml
+++ b/curations/maven/mavencentral/org.glassfish.jaxb/jaxb-core.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   2.3.0:
     licensed:
-      declared: CDDL-1.0
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   3.0.2:
     licensed:
       declared: BSD-3-Clause
