--- a/curations/nuget/nuget/-/Microsoft.Azure.Devices.Shared.yaml
+++ b/curations/nuget/nuget/-/Microsoft.Azure.Devices.Shared.yaml
@@ -83,6 +83,17 @@ revisions:
   1.3.0:
     licensed:
       declared: MIT
+  1.30.2:
+    described:
+      sourceLocation:
+        name: azure-iot-sdk-csharp
+        namespace: azure
+        provider: github
+        revision: da35dbf344ae2e55fbd8692918cff02cb4b16229
+        type: git
+        url: 'https://github.com/azure/azure-iot-sdk-csharp/commit/da35dbf344ae2e55fbd8692918cff02cb4b16229'
+    licensed:
+      declared: MIT
   1.5.0:
     licensed:
       declared: MIT
