--- a/curations/nuget/nuget/-/Microsoft.Graph.Core.yaml
+++ b/curations/nuget/nuget/-/Microsoft.Graph.Core.yaml
@@ -3,6 +3,9 @@ coordinates:
   provider: nuget
   type: nuget
 revisions:
+  2.0.14:
+    licensed:
+      declared: MIT
   2.0.5:
     licensed:
       declared: MIT
