--- a/curations/nuget/nuget/-/SpecFlow.Autofac.yaml
+++ b/curations/nuget/nuget/-/SpecFlow.Autofac.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: BSD-3-Clause
   3.9.74:
     licensed:
-      declared: Apache-2.0
+      declared: BSD-3-Clause
   3.9.8:
     licensed:
       declared: BSD-3-Clause
