--- a/curations/npm/npmjs/@progress/kendo-react-indicators.yaml
+++ b/curations/npm/npmjs/@progress/kendo-react-indicators.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: OTHER
   5.14.1:
     licensed:
-      declared: CDDL-1.0
+      declared: OTHER
   5.3.0:
     licensed:
       declared: OTHER
