--- a/curations/go/golang/github.com/jackc/pgerrcode.yaml
+++ b/curations/go/golang/github.com/jackc/pgerrcode.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   v0.0.0-20201024163028-a0d42d470451:
     licensed:
-      declared: MIT
+      declared: MIT AND PostgreSQL
