--- a/curations/go/golang/golang.org/x/exp.yaml
+++ b/curations/go/golang/golang.org/x/exp.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   v0.0.0-20220303212507-bbda1eaf7a17:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND OTHER
