--- a/curations/nuget/nuget/-/python.yaml
+++ b/curations/nuget/nuget/-/python.yaml
@@ -26,7 +26,7 @@ revisions:
       declared: Python-2.0.1
   3.11.4:
     licensed:
-      declared: PSF-2.0
+      declared: Python-2.0.1
   3.5.4:
     licensed:
       declared: Python-2.0.1
