--- a/curations/maven/mavencentral/com.nimbusds/oauth2-oidc-sdk.yaml
+++ b/curations/maven/mavencentral/com.nimbusds/oauth2-oidc-sdk.yaml
@@ -693,7 +693,7 @@ revisions:
       declared: Apache-2.0
   9.3.1:
     licensed:
-      declared: Artistic-2.0
+      declared: Apache-2.0
   '9.4':
     licensed:
       declared: Apache-2.0
