--- a/curations/git/github/microsoft/plcrashreporter.yaml
+++ b/curations/git/github/microsoft/plcrashreporter.yaml
@@ -18,7 +18,7 @@ revisions:
       declared: MIT
   81cdec2b3827feb03286cb297f4c501a8eb98df1:
     licensed:
-      declared: MS-PL
+      declared: MIT
   cfa78077d4ee2b363b60ce03948026b6c4ca1033:
     licensed:
       declared: MIT
