--- a/curations/maven/mavencentral/org.jboss/jboss-transaction-spi.yaml
+++ b/curations/maven/mavencentral/org.jboss/jboss-transaction-spi.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: LGPL-2.1-or-later
   8.0.0.Final:
     licensed:
-      declared: CC0-1.0
+      declared: LGPL-2.1-or-later
