--- a/curations/maven/mavencentral/com.sun.xml.messaging.saaj/saaj-impl.yaml
+++ b/curations/maven/mavencentral/com.sun.xml.messaging.saaj/saaj-impl.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   2.0.1:
     licensed:
-      declared: EPL-2.0
+      declared: BSD-3-Clause
