--- a/curations/maven/mavencentral/com.ibm.icu/icu4j.yaml
+++ b/curations/maven/mavencentral/com.ibm.icu/icu4j.yaml
@@ -15,7 +15,7 @@ revisions:
       declared: OTHER
   '62.1':
     licensed:
-      declared: Unicode-TOU
+      declared: OTHER
   '64.2':
     licensed:
       declared: OTHER
