--- a/curations/npm/npmjs/@elastic/eui.yaml
+++ b/curations/npm/npmjs/@elastic/eui.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: Apache-2.0
   39.1.3:
     licensed:
-      declared: SSPL-1.0 OR Elastic-2.0
+      declared: Elastic-2.0
