--- a/curations/maven/mavencentral/ch.qos.logback/logback-classic.yaml
+++ b/curations/maven/mavencentral/ch.qos.logback/logback-classic.yaml
@@ -24,4 +24,4 @@ revisions:
       declared: EPL-1.0 OR LGPL-2.1-only
   1.4.6:
     licensed:
-      declared: LGPL-2.1-only OR EPL-1.0
+      declared: EPL-1.0 OR LGPL-2.1-only
