--- a/curations/pypi/pypi/-/neo4j.yaml
+++ b/curations/pypi/pypi/-/neo4j.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   5.10.0:
     licensed:
-      declared: NONE
+      declared: Apache-2.0
   5.4.0:
     licensed:
       declared: Apache-2.0
