--- a/curations/git/github/lz4/lz4.yaml
+++ b/curations/git/github/lz4/lz4.yaml
@@ -6,19 +6,19 @@ coordinates:
 revisions:
   3e99d07bc09e1b82ee6191527bb3e555052c55ac:
     licensed:
-      declared: BSD-2-Clause AND GPL-2.0-or-later
+      declared: BSD-2-Clause AND GPL-2.0-only
   5ff839680134437dbf4678f3d0c7b371d84f4964:
     licensed:
-      declared: BSD-2-Clause AND GPL-2.0-or-later
+      declared: BSD-2-Clause AND GPL-2.0-only
   641b453d9db536ee020851bfcb1dc39f61006f0a:
     licensed:
-      declared: BSD-2-Clause AND GPL-2.0-or-later
+      declared: BSD-2-Clause AND GPL-2.0-only
   69dbafc1c4806f6c05e28c01117799087f498a2f:
     licensed:
       declared: BSD-2-Clause AND GPL-2.0-only
   8301a21773ef61656225e264f4f06ae14462bca7:
     licensed:
-      declared: BSD-2-Clause AND GPL-2.0-or-later
+      declared: BSD-2-Clause AND GPL-2.0-only
   9141ada8de016b201520c009cbfff527b8c3c119:
     licensed:
       declared: BSD-2-Clause AND GPL-2.0-only
