--- a/curations/go/golang/github.com/cwedgwood/pureclient.yaml
+++ b/curations/go/golang/github.com/cwedgwood/pureclient.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   v0.0.0-20221021050110-a5638413027d:
     licensed:
-      declared: MIT OR UNLICENSE
+      declared: MIT OR Unlicense
