--- a/curations/npm/npmjs/@azure/communication-calling.yaml
+++ b/curations/npm/npmjs/@azure/communication-calling.yaml
@@ -24,7 +24,7 @@ revisions:
       declared: OTHER
   1.12.1:
     licensed:
-      declared: Apache-2.0
+      declared: OTHER
   1.13.1-beta.1:
     licensed:
       declared: OTHER
