--- a/curations/pypi/pypi/-/libclang.yaml
+++ b/curations/pypi/pypi/-/libclang.yaml
@@ -11,4 +11,4 @@ revisions:
       declared: Apache-2.0 WITH LLVM-exception
   16.0.6:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 WITH LLVM-exception
