--- a/curations/npm/npmjs/@azure/communication-calling.yaml
+++ b/curations/npm/npmjs/@azure/communication-calling.yaml
@@ -30,7 +30,7 @@ revisions:
       declared: OTHER
   1.14.1:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.2.0-beta.1:
     licensed:
       declared: OTHER
